# Alignment

./: Cargo.toml  README.md  quiz3.sh
src/: align_result.rs  alignment.rs  alignment_engine.rs  alignment_params.rs  domain.rs  error.rs  io.rs  main.rs  match_matrix.rs  matrix.rs  parameters.rs  score_matrix.rs  traceback.rs  utils.rs
src/io/: parameters.rs
src/models/: alignment_grid.rs  alphabet.rs  gap.rs  match_matrix.rs  mod.rs  score_matrix.rs  sequences.rs
